--- a/public/index.html
+++ b/public/index.html
@@ -37,4 +37,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    console.log(window.innerHeight);
+    let viewport = document.querySelector('meta[name=viewport]');
+    viewport.setAttribute(
+      'content',
+      'height=' +
+        window.innerHeight +
+        'px, width=device-width, initial-scale=1.0'
+    );
+  </script>
 </html>
