--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,7 @@
     let viewport = document.querySelector('meta[name=viewport]');
     viewport.setAttribute(
       'content',
-      'height=' +
-        window.innerHeight +
-        'px, width=device-width, initial-scale=1.0'
+      'height=' + window.innerHeight + ', width=device-width, initial-scale=1.0'
     );
   </script>
 </html>
